--------------------------------------------------------------------------------
drkns 20.06.2022 22:32:45 +0100 - build 5980

1. Allow sourcing of keyboard mappings from xlat tables.

2. Minor refactoring.

--------------------------------------------------------------------------------
drkns 12.06.2022 20:20:20 +0100 - build 5979

1. 256 color palette support.

2. More "style" attributes: inverse, invisible.

3. Minor fixes.

--------------------------------------------------------------------------------
drkns 08.06.2022 23:20:56 +0100 - build 5978

1. Refactoring.

--------------------------------------------------------------------------------
drkns 07.06.2022 01:31:20 +0100 - build 5977

1. More logging.

--------------------------------------------------------------------------------
drkns 04.06.2022 12:37:01 +0100 - build 5976

1. Correction of 5972.2.

--------------------------------------------------------------------------------
drkns 03.06.2022 22:47:43 +0100 - build 5975

1. Another day, another workaround for Windows 10 console.

2. More logging.

--------------------------------------------------------------------------------
yjh 01.06.2022 17:39:33 +0300 - build  5974

1. Fix GPF (in 32bit release) when build with VS2022 (19.32)

--------------------------------------------------------------------------------
drkns 01.06.2022 00:54:02 +0100 - build 5973

1. Improve exception diagnostics.

2. Use Clang and GCC maps for stack traces enrichment.

--------------------------------------------------------------------------------
drkns 29.05.2022 20:03:12 +0100 - build 5972

1. Improve exception diagnostics.

2. Validate command line arguments.

--------------------------------------------------------------------------------
drkns 25.05.2022 01:00:56 +0100 - build 5971

1. Continue 5970.

--------------------------------------------------------------------------------
drkns 24.05.2022 21:18:27 +0100 - build 5970

1. Intercept heap corruption.
